Team data changes

--- a/team.html
+++ b/team.html
@@ -125,7 +125,117 @@
                     <p>KL University</p>
                     <br>
                 </div>
-            </div>       
+            </div>
+
+            <h2 class="text-center"><hr style="color:blue;"> Directors</h2>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/krishnavamsi.jpg" alt="krishna vamsi" class="img">
+                    <h2>Krishna Vamsi</h2>
+                    <strong>180030910</strong>
+                    <p class="title">Strategic Planning</p>
+                    <p>180030910@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/laxmi.jpg" alt="laxmi narayan" class="img">
+                    <h2>Laxmi Narayan</h2>
+                    <strong>180031255</strong>
+                    <p class="title">Strategic Planning</p>
+                    <p>180031255@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/nikhila.jpg" alt="nikhila" class="img">
+                    <h2>Nikhila</h2>
+                    <strong>170030802</strong>
+                    <p class="title">Support Services</p>
+                    <p>170030802@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/rohitD.jpg" alt="Rohith" class="img">
+                    <h2>Rohith</h2>
+                    <strong>180031001</strong>
+                    <p class="title">Support Services</p>
+                    <p>180031001@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/sarvani.jpg" alt="sarvani" class="img">
+                    <h2>Sarvani</h2>
+                    <strong>180030061</strong>
+                    <p class="title">Support Services</p>
+                    <p>180030061@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/charan.jpg" alt="charan" class="img">
+                    <h2>Charan</h2>
+                    <strong>180031037</strong>
+                    <p class="title">Communications & Out Reach</p>
+                    <p>180031037@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/kiran.jpg" alt="saikiran" class="img">
+                    <h2>Sai Kiran</h2>
+                    <strong>180030996</strong>
+                    <p class="title">Sponsorship & Logistics</p>
+                    <p>180030996@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/dinesh.jpg" alt="dinesh" class="img">
+                    <h2>Dinesh</h2>
+                    <strong>180030372</strong>
+                    <p class="title">Sponsorship & Logistics</p>
+                    <p>180030372@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <h2 class="text-center"><hr style="color:blue;"> Leads</h2>
+
+
     </div>
 </div>
 
