Team data changes

--- a/team.html
+++ b/team.html
@@ -235,6 +235,20 @@
 
             <h2 class="text-center"><hr style="color:blue;"> Leads</h2>
 
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/Ram sai.jpg" alt="ram sai" class="img">
+                    <h2>Ram Sai</h2>
+                    <strong>180031118</strong>
+                    <p class="title">Technical</p>
+                    <p>180031118@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+
 
     </div>
 </div>
