team data changes

--- a/team.html
+++ b/team.html
@@ -132,7 +132,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card">
                 <div class=" mb-2"></div>
-                   <img src="./assets/img/team/krishnavamsi.jpg" alt="krishna vamsi" class="img">
+                   <img src="./assets/img/team/krishnaVamsi.jpg" alt="krishna vamsi" class="img">
                     <h2>Krishna Vamsi</h2>
                     <strong>180030910</strong>
                     <p class="title">Strategic Planning</p>
@@ -248,6 +248,57 @@
                 </div>
             </div>
 
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/surya.jpg" alt="surya" class="img">
+                    <h3>Surya Devarakonda</h3>
+                    <strong>190030384</strong>
+                    <p class="title">Technical</p>
+                    <p>190030384@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/lahari.jpg" alt="lahari" class="img">
+                    <h2>Lahari</h2>
+                    <strong>180031444</strong>
+                    <p class="title">Technical</p>
+                    <p>180031444@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/dhana.jpg" alt="dhana lakshmi" class="img">
+                    <h2>Dhana Lakshmi</h2>
+                    <strong>180030636</strong>
+                    <p class="title">Technical</p>
+                    <p>180030636@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/priyanka.jpg" alt="priyanka" class="img">
+                    <h2>Priyanka</h2>
+                    <strong>190030970</strong>
+                    <p class="title">Management</p>
+                    <p>190030970@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
 
 
     </div>
