initial test stage

--- a/work.html
+++ b/work.html
@@ -16,13 +16,6 @@
     <link rel="stylesheet" href="assets/css/templatemo.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/custom.css">
-<!--
-    
-TemplateMo 561 Purple Buzz
-
-https://templatemo.com/tm-561-purple-buzz
-
--->
 </head>
 
 <body>
@@ -71,8 +64,8 @@ https://templatemo.com/tm-561-purple-buzz
 
 
     <!-- Start Banner Hero -->
-    <div id="work_banner1" class="banner-wrapper bg-light w-100 py-5">
-        <div class="banner-vertical-center-work container text-light d-flex justify-content-center align-items-center py-5 p-0">
+    <div id="work_banner1" class="banner-wrapper bg-light w-200 py-4">
+        <div class="banner-vertical-center-work container text-light d-flex justify-content-center align-items-center py-1 p-0">
             <div class="banner-content col-lg-8 col-12 m-lg-auto text-center">
                 <h1 class="banner-heading h2 display-3 pb-5 semi-bold-600 typo-space-line-center">Our Events</h1>
                     
@@ -92,13 +85,13 @@ https://templatemo.com/tm-561-purple-buzz
      <div class="row no-gutters">
        <div class="col-md-4">
            <br>
-         <img src="assets/img/hashinlcude.jpg" class="card-img" alt="#include2020">
+         <img src="assets/img/hashinclude.png" class="card-img" alt="#include2020">
        </div>
        <div class="col-md-8">
          <div class="card-body">
            <h5 class="card-title">#include2020</h5>
            <p class="card-text">#include is a national level techno fiesta which was organized by CSE Department every year. It includes technical events, workshops, hackathon, paper presentation, poster presentation, Internships and non technical events.</p>
-           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/190030384_kluniversity_in/ESXhwpx7nONFlO1boSf21dkBo1ufhb0M8M8F5cnKlA1tJw?e=kJ16Mw" role="button">Click here to view the Event Report</a>
+           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/focus_kluniversity_in/EdTqM6WT78FFlhFwSHiNjBABaMijuCQd7vG6tkUvWRjUeQ?e=ALAygk" role="button">Click here to view the Event Report</a>
          </div>
        </div>
      </div>
@@ -116,7 +109,7 @@ https://templatemo.com/tm-561-purple-buzz
          <div class="card-body">
            <h5 class="card-title">Engineer's Day 2020</h5>
            <p class="card-text">On the occasion of Engineer's Day, we've inivited S. Sankar and N. Surya Chandra Sekhar as chief guests to address how an engineer should really look like.</p>
-           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/190030384_kluniversity_in/EcHq-X3joTBDgoRb-hT1M8sBgy4uQdtfZFklZiD8sXormg?e=1cGjQW" role="button">Click here to view the Event Report</a>
+           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/focus_kluniversity_in/EQda4A1PAIJGmItb2bWJEKIBesNvCmh_5ByNsWftHo_ikQ?e=MJv4RD" role="button">Click here to view the Event Report</a>
          </div>
        </div>
      </div>
@@ -152,7 +145,7 @@ https://templatemo.com/tm-561-purple-buzz
          <div class="card-body">
            <h5 class="card-title">Guruvedic 2020</h5>
            <p class="card-text">On the occasion of Guruvedic Event, we've inivited Pandurangarao Garu who's working as Associate Professor & H.O.D of CSE Department at IIT, Hyderabad to address about teacher.</p>
-           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/190030384_kluniversity_in/EY3CwRTTXBVCm-lqkvA_IpsBfSU7tiN1DnMgtGZSF3csbg?e=oypyGS" role="button">Click here to view the Event Report</a>
+           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/focus_kluniversity_in/EQJXQ8nP6rdCgKVPmXRNnx0B45fNjyIrLYji3NJfI3da2w?e=rCoofi" role="button">Click here to view the Event Report</a>
          </div>
        </div>
      </div>
@@ -173,7 +166,7 @@ https://templatemo.com/tm-561-purple-buzz
              Azure administrative virtual hands-on training,
              Ethereum and Application Development, and 
              Hello Agile Scrum by various resource persons from the industry.  </p>
-           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/190030384_kluniversity_in/EU0_7mUQuvZEkYUBSMcI7bYBE0hTZny_8f2p9YMFFeyUKA?e=YEOC51" role="button">Click here to view the Event Report</a>
+           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/focus_kluniversity_in/EXN1HEFfbP9DrNq6qRkXZNkB_6GBtNfDteaea-q0KbMlEA?e=1Y7Eso" role="button">Click here to view the Event Report</a>
          </div>
        </div>
      </div>
@@ -190,7 +183,7 @@ https://templatemo.com/tm-561-purple-buzz
          <div class="card-body">
            <h5 class="card-title">International Conference</h5>
            <p class="card-text">We’ve conducted an International Conference (ISCDA-2020) in association with Springer Nature on 4-5th October, 2020</p>
-           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/190030384_kluniversity_in/EU0_7mUQuvZEkYUBSMcI7bYBE0hTZny_8f2p9YMFFeyUKA?e=YEOC51" role="button">Click here to view the Event Report</a>
+           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/focus_kluniversity_in/EXN1HEFfbP9DrNq6qRkXZNkB_6GBtNfDteaea-q0KbMlEA?e=1Y7Eso1" role="button">Click here to view the Event Report</a>
          </div>
        </div>
      </div>
@@ -206,7 +199,7 @@ https://templatemo.com/tm-561-purple-buzz
          <div class="card-body">
            <h5 class="card-title">48-Hr Skill Development Project-1</h5>
            <p class="card-text">For the Y19 Students, for the first time in KLU, on behalf of CSE Department, Team FOCUS has taken care of the 48-Hr hackathon drive where students are supposed to chose a business domain and build a website which include all the course which they have learnt in their entire semester and show case their project in th Hackathon.</p>
-           <a class="btn btn-primary" target="_blank" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/190030384_kluniversity_in/ETTJD60sZBJOiBLavvWtap4Bbbv4MTto8m7U2QVdVsy1VA?e=XWgj2u" role="button">Click here to view the Event Report</a>
+           <a class="btn btn-primary" target="_blank" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/focus_kluniversity_in/EeaWBPsRvaRGvgKIoAsTH6oBnR-FrX0e23hZxqCHFROv3A?e=su4IjP" role="button">Click here to view the Event Report</a>
          </div>
        </div>
      </div>
@@ -222,7 +215,7 @@ https://templatemo.com/tm-561-purple-buzz
          <div class="card-body">
            <h5 class="card-title">CODEQ 2021</h5>
            <p class="card-text">Team FOCUS had conducted a Coding contest on Hackerrank from 6th Feb 2021 to 9th Feb 2021 to develop their coding skills.</p>
-           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/190030384_kluniversity_in/ERIGE3goq85LjZhy6h65rNkBrd3sBLNabJeUH-V6eA2BGA?e=9P8u2v" role="button">Click here to view the Event Report</a>
+           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/focus_kluniversity_in/EVb-51jv7kBDtV4rijoG5EoBshtxczcEX8NdZG--Eov3aA?e=FnBKbj" role="button">Click here to view the Event Report</a>
          </div>
        </div>
      </div>
@@ -237,7 +230,7 @@ https://templatemo.com/tm-561-purple-buzz
          <div class="card-body">
            <h5 class="card-title">48-Hr Skill Development Project-2</h5>
            <p class="card-text">For the Y19 Students, on behalf of CSE Department, Team FOCUS has taken care of the 48-Hr hackathon drive where students are supposed to chose a business domain and build a website which include all the course which they have learnt in their entire semester and show case their project in th Hackathon.</p>
-           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/190030384_kluniversity_in/EXiR3COP-ItBkQ5zluXgKf8BRISsHz6QVBO7fOZKZETcWQ?e=ea4cQy" role="button">Click here to view the Event Report</a>
+           <a class="btn btn-primary" target="_blank" href="https://kluniversityin-my.sharepoint.com/:b:/g/personal/focus_kluniversity_in/EW1zACt_ERtHrfVOjuDi0JgBOYbwrI6jp6zYxqv1OX8YHw?e=FCtT9Z" role="button">Click here to view the Event Report</a>
          </div>
        </div>
      </div>
