--- a/team.html
+++ b/team.html
@@ -72,7 +72,7 @@
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="industrial clubs.html">Technical Clubs</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="industrial clubs.html">Technology Clubs</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="register.html">Registration</a>
