--- a/team.html
+++ b/team.html
@@ -252,7 +252,7 @@
                 <div class="card">
                 <div class=" mb-2"></div>
                    <img src="./assets/img/team/surya.jpg" alt="surya" class="img">
-                    <h3>Surya Devarakonda</h3>
+                    <h3>D. Surya</h3>
                     <strong>190030384</strong>
                     <p class="title">Technical</p>
                     <p>190030384@kluniversity.in</p>
@@ -316,7 +316,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card">
                 <div class=" mb-2"></div>
-                   <img src="./assets/img/team/Dakshit.jpg" alt="M aditya" class="img">
+                   <img src="./assets/img/team/M Aditya.jpg" alt="Dakshitha" class="img">
                     <h2>M Aditya</h2>
                     <strong>180030088</strong>
                     <p class="title">Management</p>
@@ -342,7 +342,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card">
                 <div class=" mb-2"></div>
-                   <img src="./assets/img/team/aditya.jpg" alt="sai harsha" class="img">
+                   <img src="./assets/img/team/Sai Harsha.jpeg" alt="sai harsha" class="img">
                     <h2>N Sai Harsha</h2>
                     <strong>170030935</strong>
                     <p class="title">Management</p>
@@ -350,6 +350,110 @@
                     <p>KL University</p>
                     <br>
                 </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/Charan.jpeg" alt="sai harsha" class="img">
+                    <h2>D. Charan Reddy</h2>
+                    <strong>190030363</strong>
+                    <p class="title">Logistics</p>
+                    <p>190030363@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/siva.jpg" alt="sai harsha" class="img">
+                    <h2>K. Sai Siva</h2>
+                    <strong>190030766</strong>
+                    <p class="title">Creative Arts</p>
+                    <p>190030766@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/subhadra.jpg" alt="sai harsha" class="img">
+                    <h2>Subhadra Devi</h2>
+                    <strong>180030604</strong>
+                    <p class="title">Management</p>
+                    <p>170030935@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/saraswathi.jpg" alt="sai harsha" class="img">
+                    <h2>Saraswathi</h2>
+                    <strong>180030648</strong>
+                    <p class="title">Designing</p>
+                    <p>180030648@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div><div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/rohit.jpg" alt="sai harsha" class="img">
+                    <h2>G Rohith</h2>
+                    <strong>190030507</strong>
+                    <p class="title">Public relations</p>
+                    <p>190030507@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div><div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/akhila.jpg" alt="sai harsha" class="img">
+                    <h2>Akhilandeswari</h2>
+                    <strong>170030935</strong>
+                    <p class="title">Management</p>
+                    <p>170030935@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div><div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/monikesh.jpg" alt="sai harsha" class="img">
+                    <h2>Monikesh</h2>
+                    <strong>170030853</strong>
+                    <p class="title">Publlic Relations</p>
+                    <p>170030853@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div><div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/pranay.jpg" alt="sai harsha" class="img">
+                    <h2>Pranay</h2>
+                    <strong>190030720</strong>
+                    <p class="title">Management</p>
+                    <p>190030720@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div><div class="col-md-4 mb-3">
+                <div class="card">
+                <div class=" mb-2"></div>
+                   <img src="./assets/img/team/pavansai.jpg" alt="Pavan Sai" class="img">
+                    <h2>G. Pavan Sai</h2>
+                    <strong>190030524</strong>
+                    <p class="title">Designing & Broadcasting</p>
+                    <p>190030524@kluniversity.in</p>
+                    <p>KL University</p>
+                    <br>
+                </div>
+            </div>
             </div>
 
     </div>
