--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
       <div class="carousel-inner">
           
         <div class="item active">
-          <img src="file:///Users/suryadevarakonda/Downloads/FOCUS-Website-master/assets/img/index1.jpg" alt="1" style="width:100%;">
+          <img src="./assets/img/index1.jpg" alt="1" style="width:100%;">
         </div>
   
         <div class="item">
-          <img src="file:///Users/suryadevarakonda/Downloads/FOCUS-Website-master/assets/img/Picture 3.jpg" alt="2" style="width:100%;">
+          <img src="./assets/img/Picture 3.jpg" alt="2" style="width:100%;">
         </div>
       
         <div class="item">
-          <img src="file:///Users/suryadevarakonda/Downloads/FOCUS-Website-master/assets/img/Picture 4.jpg" alt="3" style="width:100%;">
+          <img src="./assets/img/Picture 4.jpg" alt="3" style="width:100%;">
         </div>
 
         <div class="item">
-            <img src="file:///Users/suryadevarakonda/Downloads/FOCUS-Website-master/assets/img/Picture 5.jpg" alt="4" style="width:100%;">
+            <img src="./assets/img/Picture 5.jpg" alt="4" style="width:100%;">
         </div>
 
 
